Optimized bg image, added preload="auto" to all audio elements.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 assets/
 js-drum-kit.sublime-project
 js-drum-kit.sublime-workspace
+images/original size/lwcauvj39y-gabriel-barletta.jpg
+images/smaller/lwcauvj39y-gabriel-barletta.jpg
